fix(style): ajustar altura do elemento body e remover gap no título da seção

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body::before {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60vh;
+  height: 55vh;
   background: #ffb637;
   border-radius: 0 0 50% 50%;
   pointer-events: none;
@@ -312,7 +312,6 @@ body::-webkit-scrollbar-thumb:hover {
 .content > .sumary > .title {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
 }
 
 .content > .sumary > .title > h1 {
